# purana-samhitha-content

./: .gitignore  README.md  alembic.ini  main-prompt.md  main.py  pyproject.toml
Docs/: ARCHITECTURE.md  ollama_exporter.py  ollama_exporter.service  ollama_proxy_exporter.py  ollama_proxy_exporter.service
config/: settings.yaml
purana_factory/: __init__.py  logging_setup.py
scripts/: export_entity_folder.py  regenerate_entity.py  verify_shiva.py
shiva/: entity.json  festival_maha-shivaratri.md  festival_shiva-jayanti.md  generation_metrics.json  place_ganga-river.md  place_himalayas.md  place_kedarnath.md  place_mount-kailash.md  place_nandi-hill.md  profile.md  relationships.json  search_keywords.json  source_references.json  story_shiva-s-cosmic-dance-the-lord-of-dance.md  story_stats.json  story_the-devotees-of-shiva-markandeya-and-kannappa.md  story_the-elephant-headed-prince-the-birth-of-ganesha.md  story_the-mountain-of-fire-and-the-goddess-of-snow.md  story_the-poison-that-shook-the-heavens.md  story_the-sacred-river-ganga-and-the-power-of-shiva-s-hair.md  temple_amarnath-cave.md  temple_kailashnath-temple.md  temple_lingaraj-temple.md  temple_nageshwara-temple.md  temple_thiruvananthapuram-shiva-temple.md  weapon_damru.md  weapon_pashupatastra.md  weapon_third-eye.md  weapon_trishula.md
shiva_old/: entity.json  festival_maha-shivaratri.md  festival_shiva-chaturthi.md  festival_shiva-jayanti.md  place_arunachala-hill.md  place_chidambaram.md  place_godavari-river.md  place_kailash-parvat.md  place_kashmir.md  place_kaveri-river.md  place_kedarkhand.md  (+25 more)
(+62 files in other folders)
