[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purana-samhitha-content-factory"
version = "1.0.0"
description = "Automated Hindu mythology content generation for Purana Samhitha"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "ollama>=0.4.0",
    "requests>=2.31.0",
    "loguru>=0.7.0",
    "tenacity>=8.2.0",
    "rich>=13.0.0",
    "apscheduler>=3.10.0",
    "pyyaml>=6.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
purana-factory = "purana_factory.cli.app:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["purana_factory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
